# money_cli

./: Cargo.toml  _expense-cli.zsh  readme.md  rustfmt.toml
src/: main.rs
src/utils/: pretty.rs
